# MetaCrew

./: .dockerignore  .gitignore  Docker.dockerfile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  testApiKey.py  testApiKeys.py
Benchmarks/Crews/scienceworld_crew/: README.md  benchmark_monitor.py  manual_crew.py  pyproject.toml  run_batch.py
answer/: README.md  pyproject.toml
answer/src/answer/: crew.py  main.py
logic_crew/: pyproject.toml
logic_crew/output_logic/question_1/: Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_10/: Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_100/: Analyze_Define_VariablesClues.txt  Identify_Entities.txt
logic_crew/output_logic/question_101/: Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_102/: Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_103/: Analyze_Define_VariablesClues.txt  Generate_Possible_Arrangements.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_104/: Identify_Valid_Solutions.txt
logic_crew/output_logic/question_105/: Analyze_Define_VariablesClues.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_107/: Analyze_Define_VariablesClues.txt
logic_crew/output_logic/question_108/: Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_11/: Analyze_Define_VariablesClues.txt  Formulate_Relationships.txt  Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_110/: Analyze_Define_VariablesClues.txt
logic_crew/output_logic/question_111/: Identify_Entities.txt
logic_crew/output_logic/question_112/: Formulate_Relationships.txt  Identify_Entities.txt
logic_crew/output_logic/question_113/: Analyze_Define_VariablesClues.txt  Formulate_Relationships.txt  Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_114/: Analyze_Define_VariablesClues.txt  Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_115/: Identify_Entities.txt
logic_crew/output_logic/question_116/: Identify_Valid_Solutions.txt
logic_crew/output_logic/question_117/: Formulate_Relationships.txt
logic_crew/output_logic/question_118/: Formulate_Relationships.txt
logic_crew/output_logic/question_119/: Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_12/: Identify_Entities.txt
logic_crew/output_logic/question_120/: Analyze_Define_VariablesClues.txt  Generate_Possible_Arrangements.txt  Identify_Entities.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_121/: Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_123/: Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_124/: Generate_Possible_Arrangements.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_125/: Identify_Valid_Solutions.txt
logic_crew/output_logic/question_126/: Analyze_Define_VariablesClues.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_127/: Analyze_Define_VariablesClues.txt
logic_crew/output_logic/question_128/: Analyze_Define_VariablesClues.txt
logic_crew/output_logic/question_13/: Analyze_Define_VariablesClues.txt  Generate_Possible_Arrangements.txt  Identify_Entities.txt
logic_crew/output_logic/question_130/: Identify_Valid_Solutions.txt
logic_crew/output_logic/question_131/: Analyze_Define_VariablesClues.txt
logic_crew/output_logic/question_132/: Analyze_Define_VariablesClues.txt  Formulate_Relationships.txt  Identify_Entities.txt
logic_crew/output_logic/question_133/: Formulate_Relationships.txt  Identify_Entities.txt
logic_crew/output_logic/question_134/: Analyze_Define_VariablesClues.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_136/: Analyze_Define_VariablesClues.txt  Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_137/: Formulate_Relationships.txt
logic_crew/output_logic/question_138/: Formulate_Relationships.txt  Identify_Entities.txt
logic_crew/output_logic/question_139/: Analyze_Define_VariablesClues.txt
logic_crew/output_logic/question_14/: Analyze_Define_VariablesClues.txt  Identify_Entities.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_140/: Identify_Valid_Solutions.txt
logic_crew/output_logic/question_141/: Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_143/: Analyze_Define_VariablesClues.txt  Generate_Possible_Arrangements.txt
logic_crew/output_logic/question_145/: Analyze_Define_VariablesClues.txt  Formulate_Relationships.txt  Identify_Valid_Solutions.txt
logic_crew/output_logic/question_146/: Analyze_Define_VariablesClues.txt  Formulate_Relationships.txt  Generate_Possible_Arrangements.txt  Identify_Entities.txt  Identify_Valid_Solutions.txt
mmmu_crew/: custom_tool.py  manual_crew.py  pyproject.toml
mmmu_crew/output_mmmu/: result_manual_crew_Architecture_and_Engineering.jsonl  result_manual_crew_Art.jsonl  result_manual_crew_Art_Theory.jsonl  result_manual_crew_Biology.jsonl  result_manual_crew_Chemistry.jsonl  result_manual_crew_Computer_Science.jsonl  result_manual_crew_Finance.jsonl  result_manual_crew_Geography.jsonl  result_manual_crew_History.jsonl  result_manual_crew_Literature.jsonl  result_manual_crew_Manage.jsonl  result_manual_crew_Materials.jsonl  result_manual_crew_Math.jsonl  result_manual_crew_Pharmacy.jsonl  result_manual_crew_Physics.jsonl  result_manual_crew_Psychology.jsonl
test/: .gitignore  pyproject.toml  report.md
tfg/: README.md  pyproject.toml
tfg/db/: chroma.sqlite3
tfg/output/: experts.json  subtasks.json  workflow.json
tfg_answer_crew/: pyproject.toml
tfg_answer_crew/db/: chroma.sqlite3
tfg_answer_crew/output/: confirm_results.md  define_variables.md  set_up_equations.md  solve_for_c.md  substitute_and_rearrange.md
writing_crew/: pyproject.toml  trivia_creative_writing_100_n_5.jsonl
(+1934 files in other folders)
