[tool.poetry]
name = "test"
version = "0.1.0"
description = "test using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
test = "test.src.test.main:run"
run_crew = "test.src.test.main:run"
train = "test.src.test.main:train"
replay = "test.src.test.main:replay"
test2 = "test.src.test.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
