[project]
name = "answer"
version = "0.1.0"
description = "answer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
answer = "answer.main:run"
run_crew = "answer.main:run"
train = "answer.main:train"
replay = "answer.main:replay"
test = "answer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
