[tool.poetry]
name = "test"
version = "0.1.0"
description = "test using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
test = "test.main:run"
run_crew = "test.main:run"
train = "test.main:train"
replay = "test.main:replay"
test2 = "test.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
