[project]
name = "tfg_answer_crew"
version = "0.1.0"
description = "tfg_answer_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
tfg_answer_crew = "tfg_answer_crew.main:run"
run_crew = "tfg_answer_crew.main:run"
train = "tfg_answer_crew.main:train"
replay = "tfg_answer_crew.main:replay"
test = "tfg_answer_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
