[tool.poetry]
name = "scienceworld_crew"
version = "0.1.0"
description = "test using crewAI"
authors = ["Jesus Nuñez de Arenas Llamas"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }
unstructured = "^0.17.2"
python-magic-bin = "^0.4.14"
python-dotenv = "^1.0.0"
datasets = "^4.0.0"
tqdm = "^4.67.1"
fastchat = "^0.1.0"
torch = "^2.8.0"
transformers = "^4.55.0"
accelerate = "^1.10.0"
scienceworld = "^1.2.3"
sentence-transformers = "^5.1.0"
editdistance = "^0.8.1"
ollama = "^0.5.3"


[tool.poetry.scripts]
test = "scienceworld_crew.main:run"
run_crew = "scienceworld_crew.main:run"
train = "scienceworld_crew.main:train"
replay = "scienceworld_crew.main:replay"
test2 = "scienceworld_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"